update footnotes padding to prevent margin bleed

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -277,6 +277,7 @@ ul {
 		}
 
 		& .footnotes {
+			padding-left: var(--space-s);
 			* {
 				font-size: var(--font--0);
 				max-width: 65ch;
